WORK DONE ON NOV/29/2023

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
 	--s4: calc(var(--s3) * var(--ratio));
 	--s5: calc(var(--s4) * var(--ratio));
 	/* this is mainly used to define/exclude/capture the max-inline-size, in units of characters */
-	--measure: 65ch;
+	--measure: 75ch;
 }
 
 /* universal definitions */
@@ -38,7 +38,7 @@ footer {
 
 body {
     /* background image */
-    background-image: url("images/background/tsbg-hres.jpg"), url("images/background/tsbg-lres.jpg");
+    background-image: url("../images/background/tsbg-hres.jpg"), url("../images/background/tsbg-lres.jpg");
     background-repeat: no-repeat, no-repeat;
     background-attachment: fixed, fixed;
     background-size: cover, cover;
@@ -77,13 +77,26 @@ button {
     padding-left:var(--s-3);
     padding-right:var(--s2);
 }
+#reset-btn {
+    position: absolute;
+    bottom: 5vh;
+    left:5vw;
+    padding: var(--s-5) var(--s-3);
 
-a:link { text-decoration: none; font-family: inherit; font-size: inherit; color: black; }
-a:visited{ color: inherit; }
+    font-variant: small-caps;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+}
+#reset-btn:hover { background-color: #9A928E; color: white; }
+
+a:link { text-decoration: none; font-family: inherit; font-size: inherit; color: #9A928E; }
+a:visited{ color: #9A928E; }
 /* nifty solution to resolve shifting during normal to italic hover transition */
 /* github user 350D proposed this */
 /* does not work with the default serif fonts for whatever reason */ 
-a::before {
+/* we make sure to set :not(.window p a) so that any link inside a post does not break to next line as that is a side effect of this solution */
+a::before:not(.window p a) {
     display: block;
     content: attr(title);
     font-style: italic;
@@ -91,7 +104,7 @@ a::before {
     overflow: hidden;
     visibility: hidden;
 }
-a:hover{ font-style: italic;}
+a:hover{ font-style:italic; color: orange; }
 .linkarchives { font-style: normal; }
 .linkarchives_italic { font-style: italic; }
 .linkcategories { font-style: normal; writing-mode: vertical-rl; text-orientation: mixed;}
@@ -100,6 +113,8 @@ a:hover{ font-style: italic;}
 .linkpost_italic { font-style: italic; }
 .linkcast { font-style: normal; }
 .linkcast_italic { font-style: italic; }
+.linksearch { font-style: normal; }
+.linksearch_italic { font-style: italic; }
 
 img { 
 	width: var(--measure);
@@ -108,15 +123,17 @@ img {
 }
 
 iframe {
-	width: 35rem;
-    height: 20rem;
+	width: var(--measure);
+	max-width: 100%;
+	min-height: 15rem;
+	height: 20vh;	
 }
 
 ::-webkit-scrollbar { width: 20px; }
 ::-webkit-scrollbar-track { border-left: 10px transparent; }
 ::-webkit-scrollbar-thumb { background: black; border-left: 10px solid white; }
 
-.arrow { width:var(--s1); display:block; padding:3px; }
+.arrow { width:var(--s1); display:block; padding:3px; cursor: pointer;}
 .up { margin-top:3ch; }
 .down { margin-bottom:1ch; }
 .hidden { opacity:0; }
@@ -131,15 +148,32 @@ header { margin-top:5vh; padding-bottom:var(--s4); }
 .nav { display: flex; justify-content: space-between; text-align: center;}
 .nav div { margin-left:5vw; margin-right:5vw; z-index:5; }
 
+.searchbar { 
+    position: absolute; 
+    top:5vh; 
+    left: 18vw; 
+    min-width: 15rem; 
+    width: 25vw;
+    height: 3rem;
+
+    border-style:solid; 
+    border-color:black;
+}
+#search { display: none; }
+
 /* pop up windows styling begins */
-.window { background-color:rgba(255, 255, 255, 0.7); min-width:50rem; box-shadow: var(--s-2) var(--s-3) 4rem 0.5rem rgba(0,0,0,0.2); }
+.window { 
+    background-color:rgba(255, 255, 255, 0.7); 
+    min-width:30rem; 
+    box-shadow: var(--s-2) var(--s-3) 4rem 0.5rem rgba(0,0,0,0.2); 
+}
 
 /* styling specific to post window */ 
 #post { width:45vw; height:75vh; display:none; }
 /* styling specific to archives window */
 #archives { width:25vw; height:55vh; display:none; }
 /* styling specific to cast of characters window */
-#cast { height:65vh; display:none; }
+#cast { width:35vw; height:65vh; display:none; }
 /* styling specific to categories pane */
 #categories { display:none; }
 
@@ -152,24 +186,34 @@ header { margin-top:5vh; padding-bottom:var(--s4); }
     padding-bottom: var(--s2);
     padding-right: var(--s0);
     background-color:rgba(255, 255, 255, 0);
-    flex-grow: 3; /* set the proportion of room taken by mutliple panes */
     order: 2; /* so that subsequent panes fall to the left and not the right */
     overflow-y: auto;
+    
 }
 .pane + .pane {
     display: block;
     background-color:rgba(255, 255, 255, 0);
-    flex-grow: 1; /* set the proportion of room taken by mutliple panes */
     order: 1; /* assures that the subsequent pane will be left of first pane */
-    margin-right: var(--s1);
     padding-top: var(--s1);
     padding-bottom: var(--s1);
+    padding-left: var(--s1);
+    padding-right: var(--s3);
+
+    overflow-x: hidden;
+
 }
 
-.pane > *:not(h3) {
+.pane > *:not(h3, h4) {
 	padding-left: 5vw;
 	margin-top: 2rem;
 }
+.pane h3 { margin-left:3rem; }
+.pane h3 a { color:black; }
+.pane h3 a:hover { color:orange; }
+
+.pane h4 a { color:black; }
+.pane h4 a:hover { color:orange; }
+
 
 /* pop up windows styling end */
 
@@ -189,6 +233,7 @@ header { margin-top:5vh; padding-bottom:var(--s4); }
     height: 12rem;
     overflow: hidden;
     direction: ltr;
+    margin-right: 3rem;
 }
 #linktreelistlistenup{
     height: 12rem;
@@ -201,6 +246,17 @@ header { margin-top:5vh; padding-bottom:var(--s4); }
     direction: ltr;
 }
 /* link trees styling ends */
+
+.hide-scrollbar {
+    /*FireFox*/
+    scrollbar-width: none;
+    /*IE10+*/
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
+  .hide-scrollbar::-webkit-scrollbar {
+    /*Chrome, Safari, Edge*/
+    display: none;
+  }
 
 /* song of the day fly styling begins */
 #fly { width:18rem; height:18rem; padding: 5rem; }
