--- a/CSS/style-singlepost.css
+++ b/CSS/style-singlepost.css
@@ -29,28 +29,20 @@
 
 .post_content > * { margin-top: var(--s3); }
 
-.post_content img { width: 70vw; max-width: 50rem; }
-.post_content p { font-size: var(--s0); font-weight: 400; max-width: 50rem; padding-left:var(--s2); padding-right:var(--s2); }
+.post_content p { padding-left:var(--s2); padding-right:var(--s2); }
 
-.post_content iframe { max-inline-size:none; width:70vw; max-height:20rem; height: 50vh; max-width:50rem; }
 
-#post_title h1 { 
+/* for post titles */
+#post_title h3 { 
     position:absolute; 
     top:5vh; 
     left:10vw; 
     margin-right: var(--s5); 
-}
-
-#post_title h1 {
     font-size: var(--s3); 
     text-transform: uppercase; 
 }
 
-#post_title h3 { 
-    font-size: var(--s3); 
-    text-transform: uppercase; 
-}
-
+/* for social media icons */
 .social-media-icons { 
     position:absolute; 
     bottom:15vh; 
@@ -66,7 +58,4 @@
     max-width:var(--s3); 
     opacity:0.15;
 }
-
-.social-media-icons img:hover {
-    opacity:1;
-}
+.social-media-icons img:hover { opacity:1; }
